spanner: multiple changes
Signed-off-by: Rickard von Essen <rickard.von.essen@gmail.com>

--- a/examples-generated/spanner/v1beta2/instance.yaml
+++ b/examples-generated/spanner/v1beta2/instance.yaml
@@ -11,6 +11,7 @@ spec:
     config: regional-us-central1
     defaultBackupScheduleType: AUTOMATIC
     displayName: Test Spanner Instance
+    edition: STANDARD
     labels:
       foo: bar
     numNodes: 2
