--- a/package/crds/spanner.gcp.upbound.io_instances.yaml
+++ b/package/crds/spanner.gcp.upbound.io_instances.yaml
@@ -750,6 +750,44 @@ spec:
                       the instance.
                       Structure is documented below.
                     properties:
+                      asymmetricAutoscalingOptions:
+                        description: |-
+                          Asymmetric autoscaling options for specific replicas.
+                          Structure is documented below.
+                        items:
+                          properties:
+                            overrides:
+                              description: |-
+                                A nested object resource.
+                                Structure is documented below.
+                              properties:
+                                autoscalingLimits:
+                                  description: |-
+                                    A nested object resource.
+                                    Structure is documented below.
+                                  properties:
+                                    maxNodes:
+                                      description: The maximum number of nodes for
+                                        this specific replica.
+                                      type: number
+                                    minNodes:
+                                      description: The minimum number of nodes for
+                                        this specific replica.
+                                      type: number
+                                  type: object
+                              type: object
+                            replicaSelection:
+                              description: |-
+                                A nested object resource.
+                                Structure is documented below.
+                              properties:
+                                location:
+                                  description: The location of the replica to apply
+                                    asymmetric autoscaling options.
+                                  type: string
+                              type: object
+                          type: object
+                        type: array
                       autoscalingLimits:
                         description: |-
                           Defines scale in controls to reduce the risk of response latency
@@ -761,9 +799,8 @@ spec:
                           Structure is documented below.
                         properties:
                           maxNodes:
-                            description: |-
-                              Specifies maximum number of nodes allocated to the instance. If set, this number
-                              should be greater than or equal to min_nodes.
+                            description: The maximum number of nodes for this specific
+                              replica.
                             type: number
                           maxProcessingUnits:
                             description: |-
@@ -772,9 +809,8 @@ spec:
                               min_processing_units.
                             type: number
                           minNodes:
-                            description: |-
-                              Specifies number of nodes allocated to the instance. If set, this number
-                              should be greater than or equal to 1.
+                            description: The minimum number of nodes for this specific
+                              replica.
                             type: number
                           minProcessingUnits:
                             description: |-
@@ -822,6 +858,11 @@ spec:
                     description: |-
                       The descriptive name for this instance as it appears in UIs. Must be
                       unique per project and between 4 and 30 characters in length.
+                    type: string
+                  edition:
+                    description: |-
+                      The edition selected for this instance. Different editions provide different capabilities at different price points.
+                      Possible values are: EDITION_UNSPECIFIED, STANDARD, ENTERPRISE, ENTERPRISE_PLUS.
                     type: string
                   forceDestroy:
                     description: |-
@@ -870,6 +911,44 @@ spec:
                       the instance.
                       Structure is documented below.
                     properties:
+                      asymmetricAutoscalingOptions:
+                        description: |-
+                          Asymmetric autoscaling options for specific replicas.
+                          Structure is documented below.
+                        items:
+                          properties:
+                            overrides:
+                              description: |-
+                                A nested object resource.
+                                Structure is documented below.
+                              properties:
+                                autoscalingLimits:
+                                  description: |-
+                                    A nested object resource.
+                                    Structure is documented below.
+                                  properties:
+                                    maxNodes:
+                                      description: The maximum number of nodes for
+                                        this specific replica.
+                                      type: number
+                                    minNodes:
+                                      description: The minimum number of nodes for
+                                        this specific replica.
+                                      type: number
+                                  type: object
+                              type: object
+                            replicaSelection:
+                              description: |-
+                                A nested object resource.
+                                Structure is documented below.
+                              properties:
+                                location:
+                                  description: The location of the replica to apply
+                                    asymmetric autoscaling options.
+                                  type: string
+                              type: object
+                          type: object
+                        type: array
                       autoscalingLimits:
                         description: |-
                           Defines scale in controls to reduce the risk of response latency
@@ -881,9 +960,8 @@ spec:
                           Structure is documented below.
                         properties:
                           maxNodes:
-                            description: |-
-                              Specifies maximum number of nodes allocated to the instance. If set, this number
-                              should be greater than or equal to min_nodes.
+                            description: The maximum number of nodes for this specific
+                              replica.
                             type: number
                           maxProcessingUnits:
                             description: |-
@@ -892,9 +970,8 @@ spec:
                               min_processing_units.
                             type: number
                           minNodes:
-                            description: |-
-                              Specifies number of nodes allocated to the instance. If set, this number
-                              should be greater than or equal to 1.
+                            description: The minimum number of nodes for this specific
+                              replica.
                             type: number
                           minProcessingUnits:
                             description: |-
@@ -942,6 +1019,11 @@ spec:
                     description: |-
                       The descriptive name for this instance as it appears in UIs. Must be
                       unique per project and between 4 and 30 characters in length.
+                    type: string
+                  edition:
+                    description: |-
+                      The edition selected for this instance. Different editions provide different capabilities at different price points.
+                      Possible values are: EDITION_UNSPECIFIED, STANDARD, ENTERPRISE, ENTERPRISE_PLUS.
                     type: string
                   forceDestroy:
                     description: |-
@@ -1158,6 +1240,44 @@ spec:
                       the instance.
                       Structure is documented below.
                     properties:
+                      asymmetricAutoscalingOptions:
+                        description: |-
+                          Asymmetric autoscaling options for specific replicas.
+                          Structure is documented below.
+                        items:
+                          properties:
+                            overrides:
+                              description: |-
+                                A nested object resource.
+                                Structure is documented below.
+                              properties:
+                                autoscalingLimits:
+                                  description: |-
+                                    A nested object resource.
+                                    Structure is documented below.
+                                  properties:
+                                    maxNodes:
+                                      description: The maximum number of nodes for
+                                        this specific replica.
+                                      type: number
+                                    minNodes:
+                                      description: The minimum number of nodes for
+                                        this specific replica.
+                                      type: number
+                                  type: object
+                              type: object
+                            replicaSelection:
+                              description: |-
+                                A nested object resource.
+                                Structure is documented below.
+                              properties:
+                                location:
+                                  description: The location of the replica to apply
+                                    asymmetric autoscaling options.
+                                  type: string
+                              type: object
+                          type: object
+                        type: array
                       autoscalingLimits:
                         description: |-
                           Defines scale in controls to reduce the risk of response latency
@@ -1169,9 +1289,8 @@ spec:
                           Structure is documented below.
                         properties:
                           maxNodes:
-                            description: |-
-                              Specifies maximum number of nodes allocated to the instance. If set, this number
-                              should be greater than or equal to min_nodes.
+                            description: The maximum number of nodes for this specific
+                              replica.
                             type: number
                           maxProcessingUnits:
                             description: |-
@@ -1180,9 +1299,8 @@ spec:
                               min_processing_units.
                             type: number
                           minNodes:
-                            description: |-
-                              Specifies number of nodes allocated to the instance. If set, this number
-                              should be greater than or equal to 1.
+                            description: The minimum number of nodes for this specific
+                              replica.
                             type: number
                           minProcessingUnits:
                             description: |-
@@ -1230,6 +1348,11 @@ spec:
                     description: |-
                       The descriptive name for this instance as it appears in UIs. Must be
                       unique per project and between 4 and 30 characters in length.
+                    type: string
+                  edition:
+                    description: |-
+                      The edition selected for this instance. Different editions provide different capabilities at different price points.
+                      Possible values are: EDITION_UNSPECIFIED, STANDARD, ENTERPRISE, ENTERPRISE_PLUS.
                     type: string
                   effectiveLabels:
                     additionalProperties:
