sql: multiple changes
Signed-off-by: Rickard von Essen <rickard.von.essen@gmail.com>

--- a/examples-generated/sql/v1beta1/database.yaml
+++ b/examples-generated/sql/v1beta1/database.yaml
@@ -25,7 +25,7 @@ metadata:
 spec:
   forProvider:
     databaseVersion: MYSQL_8_0
-    deletionProtection: "true"
+    deletionProtection: true
     region: us-central1
     settings:
     - tier: db-f1-micro
