--- a/package/crds/sql.gcp.upbound.io_users.yaml
+++ b/package/crds/sql.gcp.upbound.io_users.yaml
@@ -890,9 +890,10 @@ spec:
                     description: |-
                       The user type. It determines the method to authenticate the
                       user during login. The default is the database's built-in user type. Flags
-                      include "BUILT_IN", "CLOUD_IAM_USER", and "CLOUD_IAM_SERVICE_ACCOUNT" for both
-                      Postgres and MySQL.
-                      MySQL also includes "CLOUD_IAM_GROUP", "CLOUD_IAM_GROUP_USER" and "CLOUD_IAM_GROUP_SERVICE_ACCOUNT".
+                      include "BUILT_IN", "CLOUD_IAM_USER", "CLOUD_IAM_SERVICE_ACCOUNT", "CLOUD_IAM_GROUP",
+                      "CLOUD_IAM_GROUP_USER" and "CLOUD_IAM_GROUP_SERVICE_ACCOUNT" for
+                      Postgres
+                      and MySQL.
                     type: string
                 type: object
               initProvider:
@@ -1051,9 +1052,10 @@ spec:
                     description: |-
                       The user type. It determines the method to authenticate the
                       user during login. The default is the database's built-in user type. Flags
-                      include "BUILT_IN", "CLOUD_IAM_USER", and "CLOUD_IAM_SERVICE_ACCOUNT" for both
-                      Postgres and MySQL.
-                      MySQL also includes "CLOUD_IAM_GROUP", "CLOUD_IAM_GROUP_USER" and "CLOUD_IAM_GROUP_SERVICE_ACCOUNT".
+                      include "BUILT_IN", "CLOUD_IAM_USER", "CLOUD_IAM_SERVICE_ACCOUNT", "CLOUD_IAM_GROUP",
+                      "CLOUD_IAM_GROUP_USER" and "CLOUD_IAM_GROUP_SERVICE_ACCOUNT" for
+                      Postgres
+                      and MySQL.
                     type: string
                 type: object
               managementPolicies:
@@ -1300,9 +1302,10 @@ spec:
                     description: |-
                       The user type. It determines the method to authenticate the
                       user during login. The default is the database's built-in user type. Flags
-                      include "BUILT_IN", "CLOUD_IAM_USER", and "CLOUD_IAM_SERVICE_ACCOUNT" for both
-                      Postgres and MySQL.
-                      MySQL also includes "CLOUD_IAM_GROUP", "CLOUD_IAM_GROUP_USER" and "CLOUD_IAM_GROUP_SERVICE_ACCOUNT".
+                      include "BUILT_IN", "CLOUD_IAM_USER", "CLOUD_IAM_SERVICE_ACCOUNT", "CLOUD_IAM_GROUP",
+                      "CLOUD_IAM_GROUP_USER" and "CLOUD_IAM_GROUP_SERVICE_ACCOUNT" for
+                      Postgres
+                      and MySQL.
                     type: string
                 type: object
               conditions:
