tags: doc updates only
Signed-off-by: Rickard von Essen <rickard.von.essen@gmail.com>

--- a/examples-generated/tags/v1beta1/tagbinding.yaml
+++ b/examples-generated/tags/v1beta1/tagbinding.yaml
@@ -25,6 +25,7 @@ metadata:
   name: project
 spec:
   forProvider:
+    deletionPolicy: DELETE
     name: project_id
     orgId: "123456789"
     projectId: project_id
