--- a/package/crds/tags.gcp.upbound.io_tagvalues.yaml
+++ b/package/crds/tags.gcp.upbound.io_tagvalues.yaml
@@ -158,7 +158,7 @@ spec:
                   shortName:
                     description: |-
                       Input only. User-assigned short name for TagValue. The short name should be unique for TagValues within the same parent TagKey.
-                      The short name must be 63 characters or less, beginning and ending with an alphanumeric character ([a-z0-9A-Z]) with dashes (-), underscores (_), dots (.), and alphanumerics between.
+                      The short name can have a maximum length of 256 characters. The permitted character set for the shortName includes all UTF-8 encoded Unicode characters except single quotes ('), double quotes ("), backslashes (\), and forward slashes (/).
                     type: string
                 type: object
               initProvider:
@@ -259,7 +259,7 @@ spec:
                   shortName:
                     description: |-
                       Input only. User-assigned short name for TagValue. The short name should be unique for TagValues within the same parent TagKey.
-                      The short name must be 63 characters or less, beginning and ending with an alphanumeric character ([a-z0-9A-Z]) with dashes (-), underscores (_), dots (.), and alphanumerics between.
+                      The short name can have a maximum length of 256 characters. The permitted character set for the shortName includes all UTF-8 encoded Unicode characters except single quotes ('), double quotes ("), backslashes (\), and forward slashes (/).
                     type: string
                 type: object
               managementPolicies:
@@ -465,7 +465,7 @@ spec:
                   shortName:
                     description: |-
                       Input only. User-assigned short name for TagValue. The short name should be unique for TagValues within the same parent TagKey.
-                      The short name must be 63 characters or less, beginning and ending with an alphanumeric character ([a-z0-9A-Z]) with dashes (-), underscores (_), dots (.), and alphanumerics between.
+                      The short name can have a maximum length of 256 characters. The permitted character set for the shortName includes all UTF-8 encoded Unicode characters except single quotes ('), double quotes ("), backslashes (\), and forward slashes (/).
                     type: string
                   updateTime:
                     description: |-
