vpcaccess: doc and test updates only
Signed-off-by: Rickard von Essen <rickard.von.essen@gmail.com>

--- a/examples-generated/vpcaccess/v1beta2/connector.yaml
+++ b/examples-generated/vpcaccess/v1beta2/connector.yaml
@@ -9,6 +9,8 @@ metadata:
 spec:
   forProvider:
     ipCidrRange: 10.8.0.0/28
+    maxInstances: 3
+    minInstances: 2
     networkSelector:
       matchLabels:
         testing.upbound.io/example-name: example
