--- a/package/crds/vpcaccess.gcp.upbound.io_connectors.yaml
+++ b/package/crds/vpcaccess.gcp.upbound.io_connectors.yaml
@@ -871,8 +871,7 @@ spec:
                     description: |-
                       Maximum throughput of the connector in Mbps, must be greater than min_throughput. Default is 300. Refers to the expected throughput
                       when using an e2-micro machine type. Value must be a multiple of 100 from 300 through 1000. Must be higher than the value specified by
-                      min_throughput. If both max_throughput and max_instances are provided, max_instances takes precedence over max_throughput. The use of
-                      max_throughput is discouraged in favor of max_instances.
+                      min_throughput. Only one of max_throughput and max_instances can be specified. The use of max_throughput is discouraged in favor of max_instances.
                     type: number
                   minInstances:
                     description: |-
@@ -882,8 +881,8 @@ spec:
                   minThroughput:
                     description: |-
                       Minimum throughput of the connector in Mbps. Default and min is 200. Refers to the expected throughput when using an e2-micro machine type.
-                      Value must be a multiple of 100 from 200 through 900. Must be lower than the value specified by max_throughput. If both min_throughput and
-                      min_instances are provided, min_instances takes precedence over min_throughput. The use of min_throughput is discouraged in favor of min_instances.
+                      Value must be a multiple of 100 from 200 through 900. Must be lower than the value specified by max_throughput.
+                      Only one of min_throughput and min_instances can be specified. The use of min_throughput is discouraged in favor of min_instances.
                     type: number
                   network:
                     description: Name or self_link of the VPC network. Required if
@@ -1097,8 +1096,7 @@ spec:
                     description: |-
                       Maximum throughput of the connector in Mbps, must be greater than min_throughput. Default is 300. Refers to the expected throughput
                       when using an e2-micro machine type. Value must be a multiple of 100 from 300 through 1000. Must be higher than the value specified by
-                      min_throughput. If both max_throughput and max_instances are provided, max_instances takes precedence over max_throughput. The use of
-                      max_throughput is discouraged in favor of max_instances.
+                      min_throughput. Only one of max_throughput and max_instances can be specified. The use of max_throughput is discouraged in favor of max_instances.
                     type: number
                   minInstances:
                     description: |-
@@ -1108,8 +1106,8 @@ spec:
                   minThroughput:
                     description: |-
                       Minimum throughput of the connector in Mbps. Default and min is 200. Refers to the expected throughput when using an e2-micro machine type.
-                      Value must be a multiple of 100 from 200 through 900. Must be lower than the value specified by max_throughput. If both min_throughput and
-                      min_instances are provided, min_instances takes precedence over min_throughput. The use of min_throughput is discouraged in favor of min_instances.
+                      Value must be a multiple of 100 from 200 through 900. Must be lower than the value specified by max_throughput.
+                      Only one of min_throughput and min_instances can be specified. The use of min_throughput is discouraged in favor of min_instances.
                     type: number
                   network:
                     description: Name or self_link of the VPC network. Required if
@@ -1484,8 +1482,7 @@ spec:
                     description: |-
                       Maximum throughput of the connector in Mbps, must be greater than min_throughput. Default is 300. Refers to the expected throughput
                       when using an e2-micro machine type. Value must be a multiple of 100 from 300 through 1000. Must be higher than the value specified by
-                      min_throughput. If both max_throughput and max_instances are provided, max_instances takes precedence over max_throughput. The use of
-                      max_throughput is discouraged in favor of max_instances.
+                      min_throughput. Only one of max_throughput and max_instances can be specified. The use of max_throughput is discouraged in favor of max_instances.
                     type: number
                   minInstances:
                     description: |-
@@ -1495,8 +1492,8 @@ spec:
                   minThroughput:
                     description: |-
                       Minimum throughput of the connector in Mbps. Default and min is 200. Refers to the expected throughput when using an e2-micro machine type.
-                      Value must be a multiple of 100 from 200 through 900. Must be lower than the value specified by max_throughput. If both min_throughput and
-                      min_instances are provided, min_instances takes precedence over min_throughput. The use of min_throughput is discouraged in favor of min_instances.
+                      Value must be a multiple of 100 from 200 through 900. Must be lower than the value specified by max_throughput.
+                      Only one of min_throughput and min_instances can be specified. The use of min_throughput is discouraged in favor of min_instances.
                     type: number
                   network:
                     description: Name or self_link of the VPC network. Required if
