workflows: added deletionProtection
Signed-off-by: Rickard von Essen <rickard.von.essen@gmail.com>

--- a/examples-generated/workflows/v1beta1/workflow.yaml
+++ b/examples-generated/workflows/v1beta1/workflow.yaml
@@ -9,6 +9,7 @@ metadata:
 spec:
   forProvider:
     callLogLevel: LOG_ERRORS_ONLY
+    deletionProtection: false
     description: Magic
     labels:
       env: test
