--- a/examples/workflows/v1beta1/workflow.yaml
+++ b/examples/workflows/v1beta1/workflow.yaml
@@ -12,6 +12,7 @@ metadata:
   name: example
 spec:
   forProvider:
+    deletionProtection: false
     description: Magic
     name: workflow
     region: us-central1
